--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ section {
 section:nth-child(even) {
   background: var(--primary-color);
 }
+p {
+  color: var(--text-dark);
+  margin: 0;
+}
 /*----------------------- banner-section -----------------------*/
 #banner {
   background: #1d1d1d;
