--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ section {
 section:nth-child(even) {
   background: var(--primary-color);
 }
+h2 {
+  text-decoration: underline;
+}
 p {
   color: var(--text-dark);
   margin: 0;
